--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -1,6 +1,13 @@
 
+The basic resource management model has been presented.
+But there exits a rich area for further research, as well as 
+necessary solutions for building a working prototype system.
+
 \begin{description}
 
+\item[Model Refinement]  bidirectional links, multiple users per job,
+  interactions among jobs, etc.
+  
 \item[Hierarchical Configurations]
 
 \item[Data Migration]
