--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -1,13 +1,15 @@
 \documentclass[10pt,sigconf,letterpaper,anonymous,nonacm]{acmart}
 
-\title{Virtualizing Clouds by Cloud Morphing}
+\title{Cloud Morphing: A Feedback Control Model for Distributed Resource Management}
 
 \begin{document}
 
 \begin{abstract}
 
-In this paper, we propose a dynamic pricing model for distributed
-resource management in a future distributed cloud.
+In this paper, we envision future distributed cloud services with
+abundant heterogeneous computing resources,
+and propose a dynamic pricing model as feedback control for
+distributed resource management.
 In this model, the resource cost is a function of the load of the
 resource, and the required resources for a job are allocated by a
 simple cost minimization algorithm.  This simple mechanism realizes
