--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -273,3 +273,34 @@ articleno = {18},
 numpages = {44},
 keywords = {PlanetLab, Resource discovery}
 }
+
+@TechReport{pricing-internet-1994,
+  author={Jeffrey K. MacKie-Mason and Hal R. Varian},
+  title={{Pricing the Internet}},
+  year=1994,
+  month=Jan,
+  institution={University Library of Munich, Germany},
+  type={Computational Economics},
+  url={https://ideas.repec.org/p/wpa/wuwpco/9401002.html},
+  number={9401002},
+}
+
+@article{Sen-2013,
+author = {Sen, Soumya and Joe-Wong, Carlee and Ha, Sangtae and Chiang, Mung},
+title = {A Survey of Smart Data Pricing: Past Proposals, Current Plans, and Future Trends},
+year = {2013},
+issue_date = {November 2013},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {46},
+number = {2},
+issn = {0360-0300},
+url = {https://doi.org/10.1145/2543581.2543582},
+doi = {10.1145/2543581.2543582},
+journal = {ACM Comput. Surv.},
+month = {nov},
+articleno = {15},
+numpages = {37},
+keywords = {data plans, economics, Congestion, broadband pricing}
+}
+
