--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -30,6 +30,10 @@ prove the system to be robust against changing conditions.
 
 \input{model}
 
+\section{Simulations}
+
+\input{simulation}
+
 \section{Extensions}
 
 \input{extensions}
@@ -38,11 +42,9 @@ prove the system to be robust against changing conditions.
 
 \input{related}
 
-\section{Simulation}
-
-\input{simulation}
-
 \section{Summary}
+
+We have shown that ...
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{cloudmorphing}
