--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -1,9 +1,21 @@
-Resource allocation for Edge Computing or Micro Data Centers: auction models\cite{Xu2017-zenith,Zhang2017-VMauction},
-Service-Oriented Architectures (SOAs)\cite{Suresh-SOA-SOCC2017}.
-Most approaches use some form of optimization.
 
-congestion pricing\cite{gibbens1999resource,Henderson2001}.
-a dynamic pricing model for QoS\cite{Briscoe2003-M3I},
+Resource allocation for Edge Computing or Micro Data Centers:
+Most approaches use some form of optimization and many employ auction
+models.
+Zhang {\em et al.}~\cite{Xu2017-zenith,Zhang2017-VMauction}
+proposed an online primal-dual optimization for VM auction in IaaS
+clouds for wellfare and profit maximization.
+The work by Xu {\em et al.}~\cite{Xu2017-zenith} is similar to ours in
+separating the cloud infrastructure service from the cloud service for
+micro dataceners, but a auction model is proposed for resource
+allocation.
+Distributed resource management for micro services~\cite{Suresh-SOA-SOCC2017}.
+
+Congestion pricing for networking:
+congestion pricing and smart data pricing have been
+studied~\cite{pricing-internet-1994,gibbens1999resource,Henderson2001,Sen-2013}.
+a dynamic pricing model for QoS was implemented by the
+Market Managed Multiservice Internet (M3I) project~\cite{Briscoe2003-M3I}.
 for cloud computing services\cite{Wang-hotcloud2010,Kilcioglu-SIGMETRICS2015},
 for cloud computing spot instances\cite{Song-INFOCOM2017}.
 a genetic algorithm is used in\cite{Macias-SAC2011}.
@@ -19,3 +31,5 @@ exploit it as the pseudo cost function.
 
 data migration\cite{Pu2015-geodistdata}.
 distributed data store\cite{Shima2012,Tahoe-2008}.
+
+
