--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -19,3 +19,17 @@ Simulation settings
 \label{fig:topology-simple}
 \end{center}
 \end{figure}
+
+Simulation scenarios:
+
+\begin{enumerate}
+\item	{\bf node only:} 4 nodes without randamization to show how the
+  cost function works
+\item	{\bf link only:} 4 links without randamization to show
+  different costs affects
+\item	{\bf monotonic function:} same as above but use monotonic cost
+  function.
+\item	{\bf randamize:} 4 nodes and 4 links with randomization
+\item	{\bf surge:} same as above but with a request surge at one location
+\item	{\bf complex?:} realistic scenario
+\end{enumerate}
