Update notebook. Update .gitignore for TeX. Fix few typos in TeX

--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -7,13 +7,13 @@ servers, storage, network) and dynamically allocate necessary resources
 for providing services.
 However, cloud computing system itself is still on physical cloud
 infrastructure, that is, cloud system operators manually manage
-phisical servers and network switches to meet the overall demands
+physical servers and network switches to meet the overall demands
 so as not to overload certain resources.
 
 Next challenge would be to virtualize cloud infrastructure!
 By decoupling infrastructure management from service management,
 cloud operators can be liberated from hardware resource management.
-This is similar to what happend to system administrators by cloud
+This is similar to what happens to system administrators by cloud
 computing.
 Moreover, it is not enough to shift responsibility to operators of the
 new lower infrastructure layer. We need a new self-managing
@@ -31,20 +31,20 @@ utilizes diverse and geographically scattered computing resources.
 It will require a new management mechanism to efficiently utilize such
 resources.
 On the other hand, computing resources will be abundant in the
-environment so that it will be no longer necessary to micro-manage
+environment so that it will be no longer necessary to micromanage
 computing resources.
 
 %% serverless, micro services
-Another trend is micro services and serverless computing in which
+Another trend is microservices and serverless computing in which
 a cloud service is composed of a collection of loosely-coupled
 lightweight services.
-Each micro service is ephemeral and short lived, and can be executed
-in a stateless container, 
+Each microservice is ephemeral and short-lived, and can be executed
+in a stateless container,
 which enables flexible and efficient use of underlying cloud
 resources.
 The concept has something in common with packet switching so that
 it might open up new possibilities to apply packet switching
-techniques to handling micro service jobs.
+techniques to handling microservice jobs.
 
 %% energy saving?
 Lastly, we need to take energy saving into consideration as it is
@@ -54,7 +54,7 @@ essential for future clouds, or even for future computing as a whole.
 
 {\em Cloud Morphing} is our vision for cloud virtualization in the future:
 dynamically morphing clouds.
-By dynamicaly allocatating micro services over distributed
+By dynamically allocating microservices over distributed
 heterogeneous resources, a cloud service instance emerges at the best
 location and, as the usage pattern changes, the service instance also
 transforms the locations of the resources and their connections.
@@ -96,11 +96,11 @@ without affecting the stability of the system.
 
 %% our idea: use congestion pricing mechanism for automatic load management
 To this end, we employ dynamic pricing for decentralized resource
-allocation whcih works as backpressure against congestion.
+allocation which works as backpressure against congestion.
 By design, serious congestion never happens in the system.
 
-We use pseudo pricing for manipullating resource allocation.
-Here, pseudo price is not an actual manetary charge but used to
+We use pseudo pricing for manipulating resource allocation.
+Here, pseudo price is not an actual monetary charge but used to
 control resource utilization.
 
 There exist a large body of literature formulating resource allocation
