--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -4,12 +4,12 @@ Most approaches use some form of optimization and many employ auction
 models.
 Zhang {\em et al.}~\cite{Xu2017-zenith,Zhang2017-VMauction}
 proposed an online primal-dual optimization for VM auction in IaaS
-clouds for wellfare and profit maximization.
+clouds for welfare and profit maximization.
 The work by Xu {\em et al.}~\cite{Xu2017-zenith} is similar to ours in
 separating the cloud infrastructure service from the cloud service for
-micro dataceners, but a auction model is proposed for resource
+micro datacenters, but an auction model is proposed for resource
 allocation.
-Distributed resource management for micro services~\cite{Suresh-SOA-SOCC2017}.
+Distributed resource management for microservices~\cite{Suresh-SOA-SOCC2017}.
 
 Congestion pricing for networking:
 congestion pricing and smart data pricing have been
