--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -6,17 +6,17 @@
 
 \begin{abstract}
 
-In this paper, we envision future distributed cloud services with
-abundant heterogeneous computing resources,
-and propose a dynamic pricing model as feedback control for
-distributed resource management.
-In this model, the resource cost is a function of the load of the
-resource, and the required resources for a job are allocated by a
-simple cost minimization algorithm.  This simple mechanism realizes
-automatic load balancing within the cloud, and operators can loosely
-control the utilization of each resource by manupulating the cost function.
-We examine differnt cost tuning methods for adjusting utilization, and
-prove the system to be robust against changing conditions.
+    In this paper, we envision future distributed cloud services with
+    abundant heterogeneous computing resources,
+    and propose a dynamic pricing model as feedback control for
+    distributed resource management.
+    In this model, the resource cost is a function of the load of the
+    resource, and the required resources for a job are allocated by a
+    simple cost minimization algorithm.  This simple mechanism realizes
+    automatic load balancing within the cloud, and operators can loosely
+    control the utilization of each resource by manipulating the cost function.
+    We examine different cost tuning methods for adjusting utilization, and
+    prove the system to be robust against changing conditions.
 
 \end{abstract}
 
