more related work

--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -43,6 +43,17 @@
   publisher={Elsevier}
 }
 
+@article{Kelly-1998,
+author = {Kelly, F.P. and Maulloo, A.K. and Tan, D.},
+year = {1998},
+month = {02},
+pages = {},
+title = {Rate Control for Communication Networks:Shadow Prices, Proportional Fairness and Stability},
+volume = {49},
+journal = {Journal of the Operational Research Society},
+doi = {10.1057/palgrave.jors.2600523},
+}
+
 @article{Rikhtegar2021BiTEAD,
   title={BiTE: a dynamic bi-level traffic engineering model for load balancing and energy efficiency in data center networks},
   author={Negar Rikhtegar and Manijeh Keshtgari and Omid Bushehrian and Guy Pujolle},
@@ -304,3 +315,17 @@ numpages = {37},
 keywords = {data plans, economics, Congestion, broadband pricing}
 }
 
+@inproceedings{Wagner-2012,
+author = {Wagner, Stuart and Berg, Eric Van Den and Giacopelli, Jim and Ghetie, Andrei and Burns, Jim and Tauil, Miriam and Sen, Soumya and Wang, Michael and Chiang, Mung and Lan, Tian and Laddaga, Robert and Robertson, Paul and Manghwani, Prakash},
+title = {Autonomous, Collaborative Control for Resilient Cyber Defense (ACCORD)},
+year = {2012},
+isbn = {9780769548951},
+publisher = {IEEE Computer Society},
+address = {USA},
+url = {https://doi.org/10.1109/SASOW.2012.16},
+doi = {10.1109/SASOW.2012.16},
+pages = {39–46},
+numpages = {8},
+keywords = {Nash Bargaining, game theory, distributed resource allocation, cloud computing},
+series = {SASOW '12}
+}
