--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -13,12 +13,21 @@ Distributed resource management for micro services~\cite{Suresh-SOA-SOCC2017}.
 
 Congestion pricing for networking:
 congestion pricing and smart data pricing have been
-studied~\cite{pricing-internet-1994,gibbens1999resource,Henderson2001,Sen-2013}.
+studied~\cite{pricing-internet-1994,Kelly-1998,gibbens1999resource,Henderson2001,Sen-2013}.
 a dynamic pricing model for QoS was implemented by the
 Market Managed Multiservice Internet (M3I) project~\cite{Briscoe2003-M3I}.
 for cloud computing services\cite{Wang-hotcloud2010,Kilcioglu-SIGMETRICS2015},
 for cloud computing spot instances\cite{Song-INFOCOM2017}.
 a genetic algorithm is used in\cite{Macias-SAC2011}.
+
+Wagner {\em et al.}~\cite{Wagner-2012} developed a Nash
+Bargaining–based congestion pricing mechanism in a military network
+setting to distribute jobs across multiple computing clusters for fair
+load balancing while using redundancy in job replication to provide
+reliability. The goals of manageability, complexity, and
+implementability can also conflict; measures to make network traffic
+manageable usually introduce some system complexity and implementation
+challenges.
 
 load balancing within a data center\cite{Rikhtegar2021BiTEAD}.
 
